@@ -1,6 +1,7 @@
 package com.musseukpeople.woorimap.post.application;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -12,6 +13,7 @@ import com.musseukpeople.woorimap.post.application.dto.CreatePostRequest;
 import com.musseukpeople.woorimap.post.domain.Post;
 import com.musseukpeople.woorimap.post.domain.PostRepository;
 import com.musseukpeople.woorimap.post.domain.PostTag;
+import com.musseukpeople.woorimap.tag.domain.Tag;
 
 import lombok.RequiredArgsConstructor;
 
@@ -23,8 +25,8 @@ public class PostService {
     private final PostRepository postRepository;
 
     @Transactional
-    public Long createPost(Couple couple, CreatePostRequest createPostRequest, List<Long> postTagIdList) {
-        Post post = createPostRequest.toPost(couple, toPostTag(postTagIdList));
+    public Long createPost(Couple couple, CreatePostRequest createPostRequest, List<Tag> tagsOfPost) {
+        Post post = createPostRequest.toPost(couple, toPostTag(tagsOfPost));
         return postRepository.save(post).getId();
     }
 
@@ -33,7 +35,7 @@ public class PostService {
             .orElseThrow(() -> new NotFoundPostException(ErrorCode.NOT_FOUND_COUPLE, postId));
     }
 
-    private List<PostTag> toPostTag(List<Long> saveTagIdList) {
-        return saveTagIdList.stream().map(PostTag::new).toList();
+    private List<PostTag> toPostTag(List<Tag> tagsOfPost) {
+        return tagsOfPost.stream().map(PostTag::new).collect(Collectors.toList());
     }
 }
